--- a/app/index.css
+++ b/app/index.css
@@ -407,6 +407,8 @@ nav{
 
 .change-line-div{
   margin-top: 20px;
+  font-weight: bold;
+  font-size: 16px;
 }
 .img-second-div{
   margin-left: 25px;
