--- a/app/index.css
+++ b/app/index.css
@@ -127,6 +127,7 @@ main{
 .loginButton{
   -webkit-transition: background 0.4s ease 0.25s;
   transition: background 0.4s ease 0.25s;
+  margin-right: 5px;
 }
 .loginButton:hover{
   background: #4f9adf;
@@ -680,6 +681,11 @@ nav{
 .readingSearchItem:hover{
   cursor: pointer;
   background: #e7ffcf;
+}
+.matchKeyword{
+  color: #ff3f39;
+  font-weight: bold;
+  margin: 0;
 }
 
 /*Media Queries*/
