--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -614,6 +614,8 @@ nav{
 /* HexagramImgTable */
 .hexagram-container{
   margin: 0 10px 10px 0;
+  background: #FFF;
+  -moz-transition: all 0.35s ease 0.3s;
   -webkit-transition: all 0.35s ease 0.3s;
   transition: all 0.35s ease 0.3s;
 }
