Refactoring the code for Hexagram editing function.

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -354,7 +354,7 @@ nav{
   /*margin-top: 10px;*/
 }
 .addBtn:hover{
-  background: #69aa00;
+  background: #0e4270;
   cursor: pointer;
   opacity: 1;
 }
