--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -795,6 +795,13 @@ nav{
   border-radius: 50%;
   padding: 2px;
 }
+.saved-alert{
+  opacity: 0;
+  max-width: 250px;  
+  -moz-transition: opacity .3s ease .3s;
+  -webkit-transition: opacity .3s ease .3s;
+  transition: opacity .3s ease .3s;
+}
 
 /*Media Queries*/
 /*reduce login input width*/
