--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -797,10 +797,21 @@ nav{
 }
 .saved-alert{
   opacity: 0;
-  max-width: 250px;  
+  max-width: 250px;
   -moz-transition: opacity .3s ease .3s;
   -webkit-transition: opacity .3s ease .3s;
   transition: opacity .3s ease .3s;
+}
+.reading-row-div{
+  background: #FFF;
+  -moz-transition: all 0.35s ease 0.3s;
+  -webkit-transition: all 0.35s ease 0.3s;
+  transition: all 0.35s ease 0.3s;
+  border-radius: 5px;
+}
+.reading-row-div:hover{
+  background: #dfff9a;
+  cursor: pointer;
 }
 
 /*Media Queries*/
