Resolved # 42 Refinement hexagram page (#44)
* Removed Hexagram's number from modal title. Updated snapshot for the component.

* Changed order for information.

* Updated snapshot for ImageDescription component.

* Changed name for test file.

* Changed a font color.

* Switched the position for question and analysis.

* Updated snapshot for the HexagramDetailModal component.

--- a/app/styles/ImageDescription.module.css
+++ b/app/styles/ImageDescription.module.css
@@ -9,10 +9,19 @@
 }
 .imgDes{
   margin-left: 15px;
+  color: #4b4b4b;
 }
 .imgDes div{
   margin-bottom: 6px;
 }
 .title{
   composes: title from './CommonCss.global.css';
+}
+.titleCodeName{
+  font-size: 20px;
+  font-weight: bold;
+  color: #5b2121;
+  padding-bottom: 3px;
+  border-bottom: 3px solid #000;
+  margin-bottom: 15px;
 }
