Made analysis, question, and overview can recognize line breaking.

--- a/app/styles/HexagramDetailModal.module.css
+++ b/app/styles/HexagramDetailModal.module.css
@@ -10,6 +10,9 @@
   font-style: italic;
   white-space: pre-line;
 }
+.preLineWhiteSpace{
+  white-space: pre-line;
+}
 .overViewDiv{
   font-weight: bold;
   clear: both;
