Changed color for the title name's bottom lin.e

--- a/app/styles/ImageDescription.module.css
+++ b/app/styles/ImageDescription.module.css
@@ -22,6 +22,6 @@
   font-weight: bold;
   color: #5b2121;
   padding-bottom: 3px;
-  border-bottom: 3px solid #000;
+  border-bottom: 3px solid #4b4b4b;
   margin-bottom: 15px;
 }
