Changed color for Bigram's title name.

--- a/app/styles/BigramClockBig.module.css
+++ b/app/styles/BigramClockBig.module.css
@@ -2,6 +2,10 @@
   font-size: 12px;
   margin-bottom: -5px;
 }
+.lineText{
+  color: #5b2121;
+  text-align: center;
+}
 .circleBig{
   width: 100px;
   height: 100px;
