Resolved #47 Hexagram display adjuest (#48)
* Added transfer code for adding quartet bigrams to hexagram database.

* Changed a text in HexagramUpdateForm component.

* Changed color for the title name's bottom lin.e

* Changed HexagramDetailModal.

* Adjusted height and centralize texts.

* Updated snapshot for BigramBlockBig component.

* Made the new Google font to be avaliable for the cache strategy.

* Changed color for Bigram's title name.

* Added a class name for the text line.

--- a/app/styles/BigramBlockBig.module.css
+++ b/app/styles/BigramBlockBig.module.css
@@ -27,6 +27,7 @@
   text-align: center;
 }
 .lineText{
+  color: #5b2121;
   text-align: center;
   margin: 5px 0 6px 0;
 }
@@ -45,7 +46,7 @@
 .rightTitle{
   position: relative;
   font-size: 12px;
-  top: -195px;
+  top: -160px;
   left: 198px;
   width: 0;
   height: 0;
