Fixed #67 Fixing hexagram detail display in mobile (#71)
* Fixed hexagram image display incorrectly in the small mobile screen.

* Fixed line changing table overflow on the small mobile device.

* Fixed group hexagram table overflow on the small mobile screen.

* Fixed hexagram image display incorrectly in the group hexagram table when use a small mobile device.

--- a/app/styles/ChangingLines.module.css
+++ b/app/styles/ChangingLines.module.css
@@ -1,4 +1,10 @@
+.table{
+  word-break: break-all;
+}
 .table tr td{
   border: 1px solid #a4a4a4;
   padding: 8px 15px;
+}
+.hexagramDiv{
+  min-width: 35px;
 }
