--- a/app/styles/HexagramDetailModal.module.css
+++ b/app/styles/HexagramDetailModal.module.css
@@ -29,10 +29,18 @@
 .imagePoetryDiv{
   overflow: auto;
 }
+.bigramImage{
+  margin: 40px 0 -70px 0;
+}
 /* Media Query for the image */
 @media(max-width: 768px){
   .image{
     max-width: 100%;
     margin-bottom: 15px;
+  }
+}
+@media(max-width: 997px){
+  .bigramImage{
+    margin-bottom: -30px;
   }
 }
