Resolved #109 Adjusting bigram graphic (#110)
* Changed bigram's info text.

* Changed css styles to make circle border and emphasis line becomes the same color with the circle.

* Fixed the line 25 order mistake.

* Changed bigrams' order.

* Changed Bigram example images.

--- a/app/styles/BigramCircle.module.css
+++ b/app/styles/BigramCircle.module.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 26%;
   height: 43%;
-  border: 3px solid #385623;
+  border: 4px solid #385623;
   border-radius: 100%;
   -ms-transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
@@ -77,24 +77,59 @@
   justify-content: center;
   align-items: center;
 }
-.brownBorder{
-  border-color: #5b2121;
+/* .firstDiv img{
+  margin-left: 20%;
+  margin-top: 15%;
+}
+.secondDiv img{
+  margin-right: 25%;
+  margin-top: 10%;
+}
+.thirdDiv img{
+  margin-left: 20%;
+  margin-bottom: 25%;
+}
+.fourthDiv img{
+  margin-right: 18%;
+  margin-bottom: 25%;
+} */
+.firstDiv img{
+  position: relative;
+  top: 10%;
+  left: 10%;
+}
+.secondDiv img{
+  position: relative;
+  top: 10%;
+  right: 10%;
+}
+.thirdDiv img{
+  position: relative;
+  top: -10%;
+  left: 10%;
+}
+.fourthDiv img{
+  margin-right: 18%;
+  margin-bottom: 25%;
 }
 .emphasizedThree{
-  border-left: 4px solid #000;
-  border-bottom: 4px solid #000;
+  border-left: 4px solid #385623;
+  border-bottom: 4px solid #385623;
 }
 .emphasizedZero{
-  border-right: 4px solid #000;
-  border-bottom: 4px solid #000;
+  border-right: 4px solid #385623;
+  border-bottom: 4px solid #385623;
 }
 .emphasizedOne{
-  border-top: 4px solid #000;
-  border-left: 4px solid #000;
+  border-top: 4px solid #385623;
+  border-left: 4px solid #385623;
 }
 .emphasizedTwo{
-  border-top: 4px solid #000;
-  border-right: 4px solid #000;
+  border-top: 4px solid #385623;
+  border-right: 4px solid #385623;
+}
+.brownBorder{
+  border-color: #5b2121;
 }
 .cancelRightBorder{
   border-right: 0;
